Fix wrapping issues on IE11

--- a/angular/src/app/results-page/potentials/potentials.component.scss
+++ b/angular/src/app/results-page/potentials/potentials.component.scss
@@ -57,6 +57,7 @@
       @include body-uppercase;
       text-align: center;
       height: 48px;
+      width: 100%;
     }
 
     .box-content {
